Migrate yang-data-impl to JUnit5
Migrated all tests to use JUnit5 Assertions, using
openrewrite:rewrite-testing-frameworks. Manually corrected variable modifiers,
including migration to 'var'.

JIRA: YANGTOOLS-1521
Change-Id: Iecffb046c782ec732da51d9d92738d3bfebf5ef4
Signed-off-by: matus.matok <matus.matok@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>